update for the my services sections

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,39 @@
 {
     "cSpell.words": [
+        "aliquam",
         "amet",
         "animi",
         "aperiam",
+        "atque",
+        "autem",
+        "closemenu",
         "commodi",
         "corrupti",
+        "debitis",
+        "deserunt",
+        "Dolorem",
+        "doloribus",
         "eligendi",
+        "enim",
+        "ipsam",
+        "Itaque",
+        "Iure",
+        "laborum",
         "Maiores",
+        "Molestiae",
         "obcaecati",
+        "perferendis",
+        "quidem",
         "ratione",
+        "Reiciendis",
         "similique",
         "sunt",
+        "Suscipit",
+        "temporibus",
+        "veniam",
         "vero",
+        "voluptate",
+        "voluptatem",
         "voluptatibus"
     ]
 }
