--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "aperiam",
         "atque",
         "autem",
+        "blanditiis",
         "closemenu",
         "commodi",
         "corrupti",
@@ -23,6 +24,7 @@
         "Molestiae",
         "obcaecati",
         "perferendis",
+        "quibusdam",
         "quidem",
         "ratione",
         "Reiciendis",
