Website is Complete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "aperiam",
         "atque",
         "autem",
+        "Barkster",
         "blanditiis",
         "closemenu",
         "commodi",
@@ -19,16 +20,19 @@
         "ipsam",
         "Itaque",
         "Iure",
+        "ketut",
         "laborum",
         "Maiores",
         "Molestiae",
         "obcaecati",
         "perferendis",
+        "pexels",
         "quibusdam",
         "quidem",
         "ratione",
         "Reiciendis",
         "similique",
+        "subiyanto",
         "sunt",
         "Suscipit",
         "temporibus",
